# nathan-vandermerwe-10-Assignment-10

./: Changelog.md  PROTECTION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py  readme.md
src/creational_patterns/: abstract_factory.py  builder.py  factory_method.py  prototype.py  simple_factory.py  singleton.py
src/models/: image.py  prediction.py  report.py  user.py
src/services/: base_service.py  image_service.py  prediction_service.py  user_service.py
src/tests/: test_api.py  test_factory_method.py
